plugins {
	id 'java'
	id 'jacoco'
	id 'org.springframework.boot' version '3.2.1'
	id 'io.spring.dependency-management' version '1.1.4'
	id "org.sonarqube" version "4.3.1.3277"
}

group = 'com.project'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.jetbrains:annotations:24.0.0'
	implementation 'com.google.guava:guava:31.1-jre'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	compileOnly 'org.projectlombok:lombok'
//	runtimeOnly 'com.h2database:h2:1.4.200'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.rest-assured:rest-assured:5.1.1'
//	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy 'jacocoTestReport'
}

jacocoTestReport {
	reports {
		xml.required = true
	}
}

jacocoTestCoverageVerification {
	violationRules {
		rule {
			element = 'CLASS'
			limit {
				counter = 'LINE'
				value = 'COVEREDRATIO'
				minimum = 0.8
			}
			includes = [
					'**/service/**',
					'**/domain/**'
			]
		}
	}
}

sonar {
	properties {
		property "sonar.projectKey", "sudhdkso_open-market-project"
		property "sonar.organization", "qwewww01234543210"
		property "sonar.host.url", "https://sonarcloud.io"
		property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
		property "sonar.inclusions","src/main/java/com/project/openmarket/domain/**/service/**, src/main/java/com/project/openmarket/domain/**/entity/**"
	}
}

